--- a/pom.xml
+++ b/pom.xml
@@ -413,7 +413,14 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jaxb2-maven-plugin</artifactId>
-        <version>1.5</version>
+        <version>1.6</version>
+        <dependencies>
+          <dependency>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+            <version>2.8.1</version>
+          </dependency>
+        </dependencies>
         <executions>
           <execution>
             <id>xjc-1</id>
@@ -421,7 +428,7 @@
               <goal>xjc</goal>
             </goals>
             <configuration>
-              <packageName>com.zuehlke.pgadmissions.referencedata.v2.jaxb</packageName>
+              <packageName>com.zuehlke.pgadmissions.referencedata.jaxb</packageName>
               <outputDirectory>${project.build.directory}/generated-sources/jaxb/import</outputDirectory>
               <schemaDirectory>${project.basedir}/src/main/xsd/import</schemaDirectory>
               <staleFile>${project.build.directory}/jaxb2/.schema5XjcStaleFlag</staleFile>
@@ -433,7 +440,7 @@
               <goal>xjc</goal>
             </goals>
             <configuration>
-              <packageName>com.zuehlke.pgadmissions.admissionsservice.v2.jaxb</packageName>
+              <packageName>com.zuehlke.pgadmissions.admissionsservice.jaxb</packageName>
               <outputDirectory>${project.build.directory}/generated-sources/jaxb/export</outputDirectory>
               <schemaDirectory>${project.basedir}/src/main/xsd/export</schemaDirectory>
               <staleFile>${project.build.directory}/jaxb2/.schema3XjcStaleFlag</staleFile>
