--- a/src/main/resources/enumLabels.properties
+++ b/src/main/resources/enumLabels.properties
@@ -71,3 +71,23 @@ action.SYSTEM_VIEW_APPLICATION_LIST = View Application List
 action.SYSTEM_VIEW_INSTITUTION_LIST = View Institution List
 action.SYSTEM_VIEW_PROGRAM_LIST = View Program List
 action.SYSTEM_VIEW_PROJECT_LIST = View Project List
+
+state.APPLICATION_APPROVAL = Approval
+state.APPLICATION_APPROVED = Approved
+state.APPLICATION_INTERVIEW = Interview
+state.APPLICATION_REJECTED = Rejected
+state.APPLICATION_REVIEW = Review
+state.APPLICATION_UNSUBMITTED = Unsubmitted
+state.APPLICATION_VALIDATION = Validation
+state.APPLICATION_WITHDRAWN = Withdrawn
+state.INSTITUTION_APPROVED = Approved
+state.PROGRAM_APPROVAL = Approval
+state.PROGRAM_APPROVED = Approved
+state.PROGRAM_DEACTIVATED = Deactivated
+state.PROGRAM_DISABLED = Disabled
+state.PROGRAM_REJECTED = Rejected
+state.PROGRAM_WITHDRAWN = Withdrawn
+state.PROJECT_APPROVED = Approved
+state.PROJECT_DEACTIVATED = Deactivated
+state.PROJECT_DISABLED = Disabled
+state.SYSTEM_APPROVED = Approved
