--- a/src/main/resources/enumLabels.properties
+++ b/src/main/resources/enumLabels.properties
@@ -41,6 +41,7 @@ action.INSTITUTION_VIEW_PROGRAM_LIST = View Program List
 action.INSTITUTION_VIEW_PROJECT_LIST = View Project List
 action.PROGRAM_COMPLETE_APPROVAL_STAGE = Complete Approval Stage
 action.PROGRAM_COMPLETE_RECRUITMENT = Complete Recruitment
+action.PROGRAM_CONCLUDE = Conclude
 action.PROGRAM_CONFIGURE = Configure
 action.PROGRAM_CREATE_APPLICATION = Create Application
 action.PROGRAM_CREATE_PROJECT = Create Project
@@ -54,6 +55,7 @@ action.PROGRAM_VIEW_APPLICATION_LIST = View Application List
 action.PROGRAM_VIEW_PROJECT_LIST = View Project List
 action.PROGRAM_WITHDRAW = Withdraw
 action.PROJECT_COMPLETE_RECRUITMENT = Complete Recruitment
+action.PROJECT_CONCLUDE = Conclude
 action.PROJECT_CONFIGURE = Configure
 action.PROJECT_CREATE_APPLICATION = Create Application
 action.PROJECT_ESCALATE = Escalate
