Fixed application REST API

--- a/src/main/resources/enumLabels.properties
+++ b/src/main/resources/enumLabels.properties
@@ -14,8 +14,7 @@ action.APPLICATION_CONFIRM_OFFER_RECOMMENDATION = Confirm Offer Recommendation
 action.APPLICATION_CONFIRM_REJECTION = Confirm Rejection
 action.APPLICATION_CONFIRM_SUPERVISION = Confirm Supervision
 action.APPLICATION_CORRECT = Correct
-action.APPLICATION_EDIT_AS_ADMINISTRATOR = Edit As Administrator
-action.APPLICATION_EDIT_AS_CREATOR = Edit As Creator
+action.APPLICATION_VIEW_EDIT = View / Edit
 action.APPLICATION_EMAIL_CREATOR = Email Creator
 action.APPLICATION_ESCALATE = Escalate
 action.APPLICATION_EXPORT = Export
@@ -45,7 +44,7 @@ action.PROGRAM_CONCLUDE = Conclude
 action.PROGRAM_CONFIGURE = Configure
 action.PROGRAM_CREATE_APPLICATION = Create Application
 action.PROGRAM_CREATE_PROJECT = Create Project
-action.PROGRAM_EDIT = Edit
+action.PROGRAM_VIEW_EDIT = View / Edit
 action.PROGRAM_EMAIL_CREATOR = Email Creator
 action.PROGRAM_ESCALATE = Escalate
 action.PROGRAM_EXPORT_APPLICATIONS = Export Applications
