Many resources created for system initialisation / initial workflow configuration. Removed some unnecessary database tables.

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -81,3 +81,12 @@ xml.data.export.sftp.privatekeyfile=classpath:/sshKeys/id_rsa
 xml.data.export.sftp.folder=
 
 xml.data.export.throttle.cron=0 0 23 * * *
+
+# -----------------------------------------------------------------------------
+# SYSTEM STARTUP SETTINGS
+# -----------------------------------------------------------------------------
+
+system.name = "PRiSM"
+system.user.firstName = "UCL"
+system.user.lastName = "Prism"
+system.user.email = "prism@ucl.ac.uk"
