Added comments to ApplicationRepresentation

--- a/src/main/resources/enumLabels.properties
+++ b/src/main/resources/enumLabels.properties
@@ -42,6 +42,7 @@ action.PROGRAM_COMPLETE_APPROVAL_STAGE = Complete Approval Stage
 action.PROGRAM_COMPLETE_RECRUITMENT = Complete Recruitment
 action.PROGRAM_CONCLUDE = Conclude
 action.PROGRAM_CONFIGURE = Configure
+action.PROGRAM_CORRECT = Correct
 action.PROGRAM_CREATE_APPLICATION = Create Application
 action.PROGRAM_CREATE_PROJECT = Create Project
 action.PROGRAM_VIEW_EDIT = View / Edit
