Fixed application comment API and static resources

--- a/src/main/resources/enumLabels.properties
+++ b/src/main/resources/enumLabels.properties
@@ -93,3 +93,7 @@ state.PROJECT_APPROVED = Approved
 state.PROJECT_DEACTIVATED = Deactivated
 state.PROJECT_DISABLED = Disabled
 state.SYSTEM_APPROVED = Approved
+
+gender.FEMALE = Female
+gender.MALE = Male
+gender.INDETERMINATE_GENDER = Indeterminate Gender
