Fixed multiple schema problems and finished the logic for system initialisation. Also fixed problem with cron task in state service.

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -44,16 +44,17 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 hibernate.search.default.buildIndexOnStartup=false
 
 # -----------------------------------------------------------------------------
-# EMAIL SCHEDULERS & TIMINGS
+# SCHEDULERS & TIMINGS
 # -----------------------------------------------------------------------------
 # cron expression for email.digest.cron (when testing is finished) should be: 0 0 22 * * *
 email.digest.cron=0 */10 * * * *
 data.maintenance.cron=0 */20 * * * *
+workflow.maintenance.cron=0 */1 * * * *
+xml.data.import.cron=0 0 4 * * *
 
 # -----------------------------------------------------------------------------
 # PORTICO INTEGRATION SETTINGS
 # -----------------------------------------------------------------------------
-xml.data.import.cron=0 0 4 * * *
 xml.data.import.onstartup=false
 xml.data.import.user=reference
 xml.data.import.password=wiI2+sZm
