Working version of file upload

--- a/src/environments/environment.ci.properties
+++ b/src/environments/environment.ci.properties
@@ -21,7 +21,7 @@ db.maxPoolSize=20
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
 email.prod=false
-email.sender=com.zuehlke.pgadmissions.mail.FakeLoggingMailSender
+email.sender=com.zuehlke.pgadmissions.mail.MailMockServer
 
 mail.smtp.auth=false
 mail.smtp.starttls.enable=false
