--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -87,7 +87,7 @@ xml.data.export.throttle.cron=0 0 23 * * *
 # SYSTEM STARTUP SETTINGS
 # -----------------------------------------------------------------------------
 
-system.name = "PRiSM"
-system.user.firstName = "UCL"
-system.user.lastName = "Prism"
-system.user.email = "prism@ucl.ac.uk"
+system.name=PRiSM
+system.user.firstName=UCL
+system.user.lastName=Prism
+system.user.email=prism@ucl.ac.uk
