Fixed entity export (all entities being exported)

--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -57,6 +57,7 @@ xml.data.export.sftp.host=192.168.11.115
 xml.data.export.sftp.port=22
 xml.data.export.sftp.username=pgadmin
 xml.data.export.sftp.password=pg@m1ss1on
+xml.data.export.sftp.privatekeyfile=classpath:/sshKeys/id_rsa
 xml.data.export.sftp.folder=
 # -----------------------------------------------------------------------------
 # SYSTEM STARTUP SETTINGS
