Finished view roles API

--- a/src/main/resources/enumLabels.properties
+++ b/src/main/resources/enumLabels.properties
@@ -94,6 +94,30 @@ state.PROJECT_DEACTIVATED = Deactivated
 state.PROJECT_DISABLED = Disabled
 state.SYSTEM_APPROVED = Approved
 
+role.APPLICATION_ADMINISTRATOR = Administrator
+role.APPLICATION_CREATOR = Creator
+role.APPLICATION_INTERVIEWEE = Interviewee
+role.APPLICATION_INTERVIEWER = Interviewer
+role.APPLICATION_POTENTIAL_INTERVIEWEE = Potential Interviewee
+role.APPLICATION_POTENTIAL_INTERVIEWER = Potential Interviewer
+role.APPLICATION_PRIMARY_SUPERVISOR = Primary Supervisor
+role.APPLICATION_REFEREE = Referee
+role.APPLICATION_REVIEWER = Reviewer
+role.APPLICATION_SECONDARY_SUPERVISOR = Secondary Supervisor
+role.APPLICATION_SUGGESTED_SUPERVISOR = Suggested Supervisor
+role.APPLICATION_VIEWER_RECRUITER = Viewer Recruiter
+role.APPLICATION_VIEWER_REFEREE = Viewer Referee
+role.INSTITUTION_ADMINISTRATOR = Administrator
+role.INSTITUTION_ADMITTER = Admitter
+role.PROGRAM_ADMINISTRATOR = Administrator
+role.PROGRAM_APPROVER = Approver
+role.PROGRAM_VIEWER = Viewer
+role.PROJECT_ADMINISTRATOR = Administrator
+role.PROJECT_PRIMARY_SUPERVISOR = Primary Supervisor
+role.PROJECT_SECONDARY_SUPERVISOR = Secondary Supervisor
+role.SYSTEM_ADMINISTRATOR = Administrator
+
 gender.FEMALE = Female
 gender.MALE = Male
 gender.INDETERMINATE_GENDER = Indeterminate Gender
+
