Fixed problem with unknown program type during import

--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -61,7 +61,7 @@ data.maintenance.cron=0 0 1 * * *
 # -----------------------------------------------------------------------------
 # PORTICO INTEGRATION SETTINGS
 # -----------------------------------------------------------------------------
-xml.data.import.cron=0 0 4 * * *
+xml.data.import.cron=0 0 * * * *
 xml.data.import.onstartup=true
 xml.data.import.user=reference
 xml.data.import.password=wiI2+sZm
