--- a/src/main/resources/enumLabels.properties
+++ b/src/main/resources/enumLabels.properties
@@ -54,16 +54,20 @@ action.PROGRAM_VIEW = View
 action.PROGRAM_VIEW_APPLICATION_LIST = View Application List
 action.PROGRAM_VIEW_PROJECT_LIST = View Project List
 action.PROGRAM_WITHDRAW = Withdraw
+action.PROJECT_COMPLETE_APPROVAL_STAGE = Complete Approval
 action.PROJECT_COMPLETE_RECRUITMENT = Complete Recruitment
 action.PROJECT_CONCLUDE = Conclude
 action.PROJECT_CONFIGURE = Configure
+action.PROJECT_CORRECT = Correct
 action.PROJECT_CREATE_APPLICATION = Create Application
+action.PROJECT_EMAIL_CREATOR = Email Creator
 action.PROJECT_ESCALATE = Escalate
 action.PROJECT_RESTORE = Restore
 action.PROJECT_SUSPEND = Suspend
 action.PROJECT_TERMINATE = Terminate
 action.PROJECT_VIEW = View
 action.PROJECT_VIEW_APPLICATION_LIST = View Application List
+action.PROJECT_WITHDRAW = Withdraw
 action.SYSTEM_CONFIGURE = Configure
 action.SYSTEM_CREATE_INSTITUTION = Create Institution
 action.SYSTEM_EXPORT_APPLICATIONS = Export Applications
@@ -89,9 +93,12 @@ state.PROGRAM_DEACTIVATED = Deactivated
 state.PROGRAM_DISABLED = Disabled
 state.PROGRAM_REJECTED = Rejected
 state.PROGRAM_WITHDRAWN = Withdrawn
+state.PROJECT_APPROVAL = Approval
 state.PROJECT_APPROVED = Approved
 state.PROJECT_DEACTIVATED = Deactivated
 state.PROJECT_DISABLED = Disabled
+state.PROJECT_REJECTED = Rejected
+state.PROJECT_WITHDRAWN = Withdrawn
 state.SYSTEM_APPROVED = Approved
 
 role.APPLICATION_ADMINISTRATOR = Administrator
