Improved registration service, externalized initialization configuration

--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -43,7 +43,12 @@ email.tobe=ked@zuhlke.com
 # The location where the indexes should be stored
 # -----------------------------------------------------------------------------
 hibernate.search.default.indexBase=/opt/bitnami/jboss/pgadmissions-sit-indexes/
-hibernate.search.default.buildIndexOnStartup=true
+
+# -----------------------------------------------------------------------------
+# START-UP
+# -----------------------------------------------------------------------------
+startup.hibernate.search.buildIndex=true
+startup.workflow.initialize=true
 
 # -----------------------------------------------------------------------------
 # EMAIL SCHEDULERS & TIMINGS
