--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -42,7 +42,12 @@ email.tobe=prism@ucl.ac.uk
 # The location where the indexes should be stored
 # -----------------------------------------------------------------------------
 hibernate.search.default.indexBase=/usr/local/jboss/pgadmissions-indexes/
-hibernate.search.default.buildIndexOnStartup=true
+
+# -----------------------------------------------------------------------------
+# START-UP
+# -----------------------------------------------------------------------------
+startup.hibernate.search.buildIndex=true
+startup.workflow.initialize=true
 
 # -----------------------------------------------------------------------------
 # EMAIL SCHEDULERS & TIMINGS
@@ -54,7 +59,6 @@ data.maintenance.cron=0 0 0 * * *
 # PORTICO INTEGRATION SETTINGS
 # -----------------------------------------------------------------------------
 xml.data.import.cron=0 0 4 * * *
-xml.data.import.onstartup=true
 xml.data.import.user=reference
 xml.data.import.password=wiI2+sZm
 xml.data.import.prismProgrammes.user=prism
