--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -41,7 +41,12 @@ email.tobe=ked@zuhlke.com
 # The location where the indexes should be stored
 # -----------------------------------------------------------------------------
 hibernate.search.default.indexBase=C:/prismIndexes/
-hibernate.search.default.buildIndexOnStartup=false
+
+# -----------------------------------------------------------------------------
+# START-UP
+# -----------------------------------------------------------------------------
+startup.hibernate.search.buildIndex=false
+startup.workflow.initialize=false
 
 # -----------------------------------------------------------------------------
 # SCHEDULERS & TIMINGS
@@ -55,7 +60,6 @@ xml.data.import.cron=0 0 4 * * *
 # -----------------------------------------------------------------------------
 # PORTICO INTEGRATION SETTINGS
 # -----------------------------------------------------------------------------
-xml.data.import.onstartup=false
 xml.data.import.user=reference
 xml.data.import.password=wiI2+sZm
 xml.data.import.prismProgrammes.user=prism
