--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -26,7 +26,12 @@ email.address.to=uclprism@gmail.com
 # The location where the indexes should be stored
 # -----------------------------------------------------------------------------
 hibernate.search.default.indexBase=C:/prismIndexes/
-hibernate.search.default.buildIndexOnStartup=false
+
+# -----------------------------------------------------------------------------
+# START-UP
+# -----------------------------------------------------------------------------
+startup.hibernate.search.buildIndex=false
+startup.workflow.initialize=false
 
 # -----------------------------------------------------------------------------
 # SCHEDULERS & TIMINGS
