Added program type static resource

--- a/src/main/resources/enumLabels.properties
+++ b/src/main/resources/enumLabels.properties
@@ -128,3 +128,11 @@ gender.FEMALE = Female
 gender.MALE = Male
 gender.INDETERMINATE_GENDER = Indeterminate Gender
 
+programType.MRES = MRes
+programType.MDRES = MD(Res)
+programType.MSC = MSc
+programType.RESEARCH_DEGREE = Research Degree
+programType.ENGINEERING_DOCTORATE = Engineering Doctorate
+programType.INTERNSHIP = Internship
+programType.VISITING_RESEARCH = Research Visit
+programType.UNCLASSIFIED = Unclassified
