Added iso countries import

--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -49,6 +49,7 @@ hibernate.search.default.indexBase=/opt/bitnami/jboss/pgadmissions-sit-indexes/
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=true
 startup.workflow.initialize=true
+startup.isoCountries.import=false
 
 # -----------------------------------------------------------------------------
 # EMAIL SCHEDULERS & TIMINGS
@@ -60,7 +61,6 @@ data.maintenance.cron=0 0 1 * * *
 # PORTICO INTEGRATION SETTINGS
 # -----------------------------------------------------------------------------
 xml.data.import.cron=0 0 4 * * *
-xml.data.import.onstartup=false
 xml.data.import.user=reference
 xml.data.import.password=wiI2+sZm
 xml.data.import.prismProgrammes.user=prism
