--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -48,6 +48,7 @@ hibernate.search.default.indexBase=/usr/local/jboss/pgadmissions-indexes/
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=true
 startup.workflow.initialize=true
+startup.isoCountries.import=false
 
 # -----------------------------------------------------------------------------
 # EMAIL SCHEDULERS & TIMINGS
