--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -32,6 +32,7 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=false
 startup.workflow.initialize=false
+startup.isoCountries.import=false
 
 # -----------------------------------------------------------------------------
 # SCHEDULERS & TIMINGS
