--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -47,7 +47,7 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=false
 startup.workflow.initialize=false
-startup.isoCountries.import=true
+startup.isoCountries.import=false
 
 # -----------------------------------------------------------------------------
 # SCHEDULERS & TIMINGS
