Fixed multiple problems after last model changes

--- a/src/main/resources/enumLabels.properties
+++ b/src/main/resources/enumLabels.properties
@@ -29,8 +29,12 @@ action.APPLICATION_VIEW_AS_CREATOR = View As Creator
 action.APPLICATION_VIEW_AS_RECRUITER = View As Recruiter
 action.APPLICATION_VIEW_AS_REFEREE = View As Referee
 action.APPLICATION_WITHDRAW = Withdraw
+action.INSTITUTION_COMPLETE_APPROVAL_STAGE = Complete Approval Stage
 action.INSTITUTION_CONFIGURE = Configure
+action.INSTITUTION_CORRECT = Correct
 action.INSTITUTION_CREATE_PROGRAM = Create Program
+action.INSTITUTION_EMAIL_CREATOR = Email Creator
+action.INSTITUTION_ESCALATE = Escalate
 action.INSTITUTION_EXPORT_APPLICATIONS = Export Applications
 action.INSTITUTION_EXPORT_PROGRAMS = Export Programs
 action.INSTITUTION_IMPORT_PROGRAM = Import Program
@@ -38,6 +42,7 @@ action.INSTITUTION_VIEW = View
 action.INSTITUTION_VIEW_APPLICATION_LIST = View Application List
 action.INSTITUTION_VIEW_PROGRAM_LIST = View Program List
 action.INSTITUTION_VIEW_PROJECT_LIST = View Project List
+action.INSTITUTION_WITHDRAW = Withdraw
 action.PROGRAM_COMPLETE_APPROVAL_STAGE = Complete Approval Stage
 action.PROGRAM_COMPLETE_RECRUITMENT = Complete Recruitment
 action.PROGRAM_CONCLUDE = Conclude
@@ -86,7 +91,10 @@ state.APPLICATION_REVIEW = Review
 state.APPLICATION_UNSUBMITTED = Unsubmitted
 state.APPLICATION_VALIDATION = Validation
 state.APPLICATION_WITHDRAWN = Withdrawn
+state.INSTITUTION_APPROVAL = Approval
 state.INSTITUTION_APPROVED = Approved
+state.INSTITUTION_REJECTED = Rejected
+state.INSTITUTION_WITHDRAWN = Withdrawn
 state.PROGRAM_APPROVAL = Approval
 state.PROGRAM_APPROVED = Approved
 state.PROGRAM_DEACTIVATED = Deactivated
