--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -46,7 +46,7 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # START-UP
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=false
-startup.workflow.initialize=true
+startup.workflow.initialize=false
 startup.isoCountries.import=false
 
 # -----------------------------------------------------------------------------
