Lots of changes to add the update notification functionality and reintroduce resource code.

--- a/src/environments/environment.ci.properties
+++ b/src/environments/environment.ci.properties
@@ -48,7 +48,11 @@ hibernate.search.default.buildIndexOnStartup=false
 # -----------------------------------------------------------------------------
 # EMAIL SCHEDULERS & TIMINGS
 # -----------------------------------------------------------------------------
-email.digest.cron=0 0 23 * * *
+email.individual.cron=0 */1 * * * *
+email.syndicated.cron=0 0 23 * * *
+xml.data.import.cron=0 0 4 * * *
+data.maintenance.cron=0 0 5 * * *
+workflow.maintenance.cron=0 */1 * * * *
 
 # -----------------------------------------------------------------------------
 # PORTICO INTEGRATION SETTINGS
@@ -81,5 +85,3 @@ xml.data.export.sftp.username=prismd
 xml.data.export.sftp.password=
 xml.data.export.sftp.privatekeyfile=classpath:/sshKeys/id_rsa
 xml.data.export.sftp.folder=
-
-xml.data.export.throttle.cron=0 0 23 * * *
