--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -37,8 +37,8 @@ startup.isoCountries.import=false
 # -----------------------------------------------------------------------------
 # SCHEDULERS & TIMINGS
 # -----------------------------------------------------------------------------
-# cron expression for email.digest.cron (when testing is finished) should be: 0 0 22 * * *
-email.digest.cron=0 */10 * * * *
+email.individual.cron=0 */1 * * * *
+email.syndicated.cron=0 0 23 * * *
 data.maintenance.cron=0 */20 * * * *
 workflow.maintenance.cron=0 */1 * * * *
 xml.data.import.cron=0 0 4 * * *
@@ -65,6 +65,7 @@ xml.data.export.sftp.username=pgadmin
 xml.data.export.sftp.password=pg@m1ss1on
 xml.data.export.sftp.privatekeyfile=classpath:/sshKeys/id_rsa
 xml.data.export.sftp.folder=
+
 # -----------------------------------------------------------------------------
 # SYSTEM STARTUP SETTINGS
 # -----------------------------------------------------------------------------
