--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -53,8 +53,11 @@ startup.isoCountries.import=false
 # -----------------------------------------------------------------------------
 # EMAIL SCHEDULERS & TIMINGS
 # -----------------------------------------------------------------------------
-email.digest.cron=0 0 23 * * *
-data.maintenance.cron=0 0 0 * * *
+email.individual.cron=0 */1 * * * *
+email.syndicated.cron=0 0 23 * * *
+xml.data.import.cron=0 0 4 * * *
+data.maintenance.cron=0 0 5 * * *
+workflow.maintenance.cron=0 */1 * * * *
 
 # -----------------------------------------------------------------------------
 # PORTICO INTEGRATION SETTINGS
@@ -86,5 +89,3 @@ xml.data.export.sftp.username=prism
 xml.data.export.sftp.password=ra1n80wt
 xml.data.export.sftp.privatekeyfile=classpath:/sshKeys/id_rsa
 xml.data.export.sftp.folder=/u02/live/docs/prism
-
-xml.data.export.throttle.cron=0 0 23 * * *
