--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -46,17 +46,17 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # START-UP
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=false
-startup.workflow.initialize=false
+startup.workflow.initialize=true
 startup.isoCountries.import=false
 
 # -----------------------------------------------------------------------------
 # SCHEDULERS & TIMINGS
 # -----------------------------------------------------------------------------
-# cron expression for email.digest.cron (when testing is finished) should be: 0 0 22 * * *
-email.digest.cron=0 */10 * * * *
-data.maintenance.cron=0 */20 * * * *
-workflow.maintenance.cron=0 */1 * * * *
+email.individual.cron=0 */1 * * * *
+email.syndicated.cron=0 0 23 * * *
 xml.data.import.cron=0 0 4 * * *
+data.maintenance.cron=0 0 5 * * *
+workflow.maintenance.cron=0 */1 * * * *
 
 # -----------------------------------------------------------------------------
 # PORTICO INTEGRATION SETTINGS
@@ -85,8 +85,6 @@ xml.data.export.sftp.username=pgadmin
 xml.data.export.sftp.password=pg@m1ss1on
 xml.data.export.sftp.privatekeyfile=classpath:/sshKeys/id_rsa
 xml.data.export.sftp.folder=
-
-xml.data.export.throttle.cron=0 0 23 * * *
 
 # -----------------------------------------------------------------------------
 # SYSTEM STARTUP SETTINGS
