improvement to send individual messages straight away.

--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -37,11 +37,10 @@ startup.isoCountries.import=false
 # -----------------------------------------------------------------------------
 # SCHEDULERS & TIMINGS
 # -----------------------------------------------------------------------------
-email.individual.cron=0 */1 * * * *
-email.syndicated.cron=0 0 23 * * *
-data.maintenance.cron=0 */20 * * * *
-workflow.maintenance.cron=0 */1 * * * *
+email.syndicated.cron=0 0 1 * * *
 xml.data.import.cron=0 0 4 * * *
+data.maintenance.cron=0 0 5 * * *
+workflow.maintenance.cron=0 */1 * * * *
 
 # -----------------------------------------------------------------------------
 # PORTICO INTEGRATION SETTINGS
