--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -46,14 +46,13 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # START-UP
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=false
-startup.workflow.initialize=true
+startup.workflow.initialize=false
 startup.isoCountries.import=false
 
 # -----------------------------------------------------------------------------
 # SCHEDULERS & TIMINGS
 # -----------------------------------------------------------------------------
-email.individual.cron=0 */1 * * * *
-email.syndicated.cron=0 0 23 * * *
+email.syndicated.cron=0 0 1 * * *
 xml.data.import.cron=0 0 4 * * *
 data.maintenance.cron=0 0 5 * * *
 workflow.maintenance.cron=0 */1 * * * *
