Another small fix to workflow for program import.

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -46,7 +46,7 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # START-UP
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=false
-startup.workflow.initialize=false
+startup.workflow.initialize=true
 startup.isoCountries.import=false
 
 # -----------------------------------------------------------------------------
@@ -89,5 +89,5 @@ xml.data.export.sftp.folder=
 
 system.name=PRiSM
 system.user.firstName=UCL
-system.user.lastName=Prism
+system.user.lastName=PRiSM
 system.user.email=prism@ucl.ac.uk
