Integration of system startup with registration service.

--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -86,3 +86,13 @@ xml.data.export.sftp.username=prism
 xml.data.export.sftp.password=ra1n80wt
 xml.data.export.sftp.privatekeyfile=classpath:/sshKeys/id_rsa
 xml.data.export.sftp.folder=/u02/live/docs/prism
+
+# -----------------------------------------------------------------------------
+# SYSTEM STARTUP SETTINGS
+# -----------------------------------------------------------------------------
+
+system.name=PRiSM
+system.user.firstName=UCL
+system.user.lastName=PRiSM
+system.user.email=prism@ucl.ac.uk
+system.user.password=PRiSM
