--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -67,7 +67,8 @@ xml.data.export.sftp.folder=
 # SYSTEM STARTUP SETTINGS
 # -----------------------------------------------------------------------------
 
-system.name = "PRiSM"
-system.user.firstName = "UCL"
-system.user.lastName = "Prism"
-system.user.email = "prism@ucl.ac.uk"
+system.name=PRiSM
+system.user.firstName=UCL
+system.user.lastName=PRiSM
+system.user.email=prism@ucl.ac.uk
+system.user.password=PRiSM
