--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -91,3 +91,4 @@ system.name=PRiSM
 system.user.firstName=UCL
 system.user.lastName=PRiSM
 system.user.email=prism@ucl.ac.uk
+system.user.password=PRiSM
