--- a/src/main/resources/enumLabels.properties
+++ b/src/main/resources/enumLabels.properties
@@ -78,6 +78,7 @@ action.SYSTEM_CREATE_INSTITUTION = Create Institution
 action.SYSTEM_EXPORT_APPLICATIONS = Export Applications
 action.SYSTEM_EXPORT_PROGRAMS = Export Programs
 action.SYSTEM_MANAGE_ACCOUNT = Manage Account
+action.SYSTEM_STARTUP = System Startup
 action.SYSTEM_VIEW_APPLICATION_LIST = View Application List
 action.SYSTEM_VIEW_INSTITUTION_LIST = View Institution List
 action.SYSTEM_VIEW_PROGRAM_LIST = View Program List
