Added json indentation, first version of personal details DTO (not working yet)

--- a/src/environments/environment.ci.properties
+++ b/src/environments/environment.ci.properties
@@ -82,3 +82,9 @@ xml.data.export.sftp.username=prismd
 xml.data.export.sftp.password=
 xml.data.export.sftp.privatekeyfile=classpath:/sshKeys/id_rsa
 xml.data.export.sftp.folder=
+
+# -----------------------------------------------------------------------------
+# SERIALIZATION SETTINGS
+# -----------------------------------------------------------------------------
+
+json.pretty.print=true
