--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -92,3 +92,9 @@ system.user.firstName=UCL
 system.user.lastName=PRiSM
 system.user.email=prism@ucl.ac.uk
 system.user.password=PRiSM
+
+# -----------------------------------------------------------------------------
+# SERIALIZATION SETTINGS
+# -----------------------------------------------------------------------------
+
+json.pretty.print=true
