Bug fixes after Alastair's changes

--- a/src/main/resources/enumLabels.properties
+++ b/src/main/resources/enumLabels.properties
@@ -39,6 +39,7 @@ action.INSTITUTION_EXPORT_APPLICATIONS = Export Applications
 action.INSTITUTION_EXPORT_PROGRAMS = Export Programs
 action.INSTITUTION_IMPORT_PROGRAM = Import Program
 action.INSTITUTION_VIEW = View
+action.INSTITUTION_VIEW_EDIT = View / Edit
 action.INSTITUTION_VIEW_APPLICATION_LIST = View Application List
 action.INSTITUTION_VIEW_PROGRAM_LIST = View Program List
 action.INSTITUTION_VIEW_PROJECT_LIST = View Project List
@@ -50,13 +51,12 @@ action.PROGRAM_CONFIGURE = Configure
 action.PROGRAM_CORRECT = Correct
 action.PROGRAM_CREATE_APPLICATION = Create Application
 action.PROGRAM_CREATE_PROJECT = Create Project
-action.PROGRAM_VIEW_EDIT = View / Edit
 action.PROGRAM_EMAIL_CREATOR = Email Creator
 action.PROGRAM_ESCALATE = Escalate
 action.PROGRAM_EXPORT_APPLICATIONS = Export Applications
 action.PROGRAM_RESTORE = Restore
-action.PROGRAM_VIEW = View
 action.PROGRAM_VIEW_APPLICATION_LIST = View Application List
+action.PROGRAM_VIEW_EDIT = View / Edit
 action.PROGRAM_VIEW_PROJECT_LIST = View Project List
 action.PROGRAM_WITHDRAW = Withdraw
 action.PROJECT_COMPLETE_APPROVAL_STAGE = Complete Approval
@@ -72,6 +72,7 @@ action.PROJECT_SUSPEND = Suspend
 action.PROJECT_TERMINATE = Terminate
 action.PROJECT_VIEW = View
 action.PROJECT_VIEW_APPLICATION_LIST = View Application List
+action.PROJECT_VIEW_EDIT = View / Edit
 action.PROJECT_WITHDRAW = Withdraw
 action.SYSTEM_CONFIGURE = Configure
 action.SYSTEM_CREATE_INSTITUTION = Create Institution
@@ -80,6 +81,7 @@ action.SYSTEM_EXPORT_PROGRAMS = Export Programs
 action.SYSTEM_MANAGE_ACCOUNT = Manage Account
 action.SYSTEM_STARTUP = System Startup
 action.SYSTEM_VIEW_APPLICATION_LIST = View Application List
+action.SYSTEM_VIEW_EDIT = View / Edit
 action.SYSTEM_VIEW_INSTITUTION_LIST = View Institution List
 action.SYSTEM_VIEW_PROGRAM_LIST = View Program List
 action.SYSTEM_VIEW_PROJECT_LIST = View Project List
@@ -108,7 +110,7 @@ state.PROJECT_DEACTIVATED = Deactivated
 state.PROJECT_DISABLED = Disabled
 state.PROJECT_REJECTED = Rejected
 state.PROJECT_WITHDRAWN = Withdrawn
-state.SYSTEM_APPROVED = Approved
+state.SYSTEM_RUNNING = Running
 
 role.APPLICATION_ADMINISTRATOR = Administrator
 role.APPLICATION_CREATOR = Creator
