--- a/src/main/resources/enumLabels.properties
+++ b/src/main/resources/enumLabels.properties
@@ -147,3 +147,11 @@ programType.ENGINEERING_DOCTORATE = Engineering Doctorate
 programType.INTERNSHIP = Internship
 programType.VISITING_RESEARCH = Research Visit
 programType.UNCLASSIFIED = Unclassified
+
+yesNoUnsureResponse.YES = Yes
+yesNoUnsureResponse.NO = No
+yesNoUnsureResponse.UNSURE = Unsure
+
+applicationResidenceStatus.HOME = Home/EU
+applicationResidenceStatus.OVERSEAS = Overseas
+applicationResidenceStatus.UNSURE = Unsure
