Framework allowing integration tests that passed already to be skipped.

--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -47,9 +47,16 @@ hibernate.search.default.indexBase=/opt/bitnami/jboss/pgadmissions-sit-indexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.hibernate.search.buildIndex=true
-startup.workflow.initialize=true
-startup.isoCountries.import=false
+startup.hibernate.search.buildIndex=false
+startup.workflow.initialize=false
+startup.institutionDomicile.import=false
+startup.advertCategory.import=false
+
+# -----------------------------------------------------------------------------
+# SYSTEM-DATA-IMPORT
+# -----------------------------------------------------------------------------
+institutionDomicile.import.location=xml/iso/iso_country_codes.xml
+advertCategory.import.location=xml/opportunityCategories/soc2010.csv
 
 # -----------------------------------------------------------------------------
 # EMAIL SCHEDULERS & TIMINGS
