--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -47,7 +47,14 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=false
 startup.workflow.initialize=false
-startup.isoCountries.import=false
+startup.institutionDomicile.import=false
+startup.advertCategory.import=false
+
+# -----------------------------------------------------------------------------
+# SYSTEM-DATA-IMPORT
+# -----------------------------------------------------------------------------
+institutionDomicile.import.location=xml/iso/iso_country_codes.xml
+advertCategory.import.location=xml/opportunityCategories/soc2010.csv
 
 # -----------------------------------------------------------------------------
 # SCHEDULERS & TIMINGS
