--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -32,13 +32,14 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=false
 startup.workflow.initialize=false
-startup.isoCountries.import=false
+startup.institutionDomicile.import=false
+startup.advertCategory.import=false
 
 # -----------------------------------------------------------------------------
-# SCHEDULERS & TIMINGS
+# SYSTEM-DATA-IMPORT
 # -----------------------------------------------------------------------------
-daily.maintenance.cron=0 0 1 * * *
-ongoing.maintenance.cron=0 */5 * * * *
+institutionDomicile.import.location=xml/iso/iso_country_codes.xml
+advertCategory.import.location=xml/opportunityCategories/soc2010.csv
 
 # -----------------------------------------------------------------------------
 # PORTICO INTEGRATION SETTINGS
