--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -46,9 +46,16 @@ hibernate.search.default.indexBase=/usr/local/jboss/pgadmissions-indexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.hibernate.search.buildIndex=true
-startup.workflow.initialize=true
-startup.isoCountries.import=false
+startup.hibernate.search.buildIndex=false
+startup.workflow.initialize=false
+startup.institutionDomicile.import=false
+startup.advertCategory.import=false
+
+# -----------------------------------------------------------------------------
+# SYSTEM-DATA-IMPORT
+# -----------------------------------------------------------------------------
+institutionDomicile.import.location=xml/iso/iso_country_codes.xml
+advertCategory.import.location=xml/opportunityCategories/soc2010.csv
 
 # -----------------------------------------------------------------------------
 # EMAIL SCHEDULERS & TIMINGS
