Fixed merging problems and improved testing framework.

--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -23,12 +23,16 @@ email.address.to=uclprism@gmail.com
 
 # -----------------------------------------------------------------------------
 # HIBERNATE FULL TEXT SEARCH
-# The location where the indexes should be stored
 # -----------------------------------------------------------------------------
 hibernate.search.default.indexBase=C:/prismIndexes/
 
 # -----------------------------------------------------------------------------
-# START-UP
+# INTEGRATION TESTING
+# -----------------------------------------------------------------------------
+integration.testing.clear.history=false
+
+# -----------------------------------------------------------------------------
+# START UP
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=false
 startup.workflow.initialize=false
@@ -36,7 +40,7 @@ startup.institutionDomicile.import=false
 startup.advertCategory.import=false
 
 # -----------------------------------------------------------------------------
-# SYSTEM-DATA-IMPORT
+# SYSTEM DATA IMPORT
 # -----------------------------------------------------------------------------
 institutionDomicile.import.location=xml/iso/iso_country_codes.xml
 advertCategory.import.location=xml/opportunityCategories/soc2010.csv
