--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -76,3 +76,12 @@ system.name=PRiSM
 system.user.firstName=UCL
 system.user.lastName=PRiSM
 system.user.email=prism@ucl.ac.uk
+
+system.default.email.subject.directory=email/subject/
+system.default.email.content.directory=email/content/
+
+# -----------------------------------------------------------------------------
+# SERIALIZATION SETTINGS
+# -----------------------------------------------------------------------------
+
+json.pretty.print=true
