Turned off the institution data import in dev environments and fixed bug in application export scheduler.

--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -44,6 +44,7 @@ startup.advertCategory.import=false
 # -----------------------------------------------------------------------------
 institutionDomicile.import.location=xml/iso/iso_country_codes.xml
 advertCategory.import.location=xml/opportunityCategories/soc2010.csv
+institution.feed.data.import=false
 
 # -----------------------------------------------------------------------------
 # PORTICO INTEGRATION SETTINGS
