--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -55,6 +55,7 @@ startup.advertCategory.import=false
 # -----------------------------------------------------------------------------
 institutionDomicile.import.location=xml/iso/iso_country_codes.xml
 advertCategory.import.location=xml/opportunityCategories/soc2010.csv
+institution.feed.data.import=false
 
 # -----------------------------------------------------------------------------
 # SCHEDULERS & TIMINGS
