Integrated role conflict checking with user role creation and merging.

--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -16,7 +16,7 @@ db.password=pgadmissions
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
 email.prod=false
-email.sender=com.zuehlke.pgadmissions.mail.MailMockServer
+email.sender=com.zuehlke.pgadmissions.mail.MailMockSender
 
 email.address.from=pgadmissions.jenkins@zuhlke.com
 email.address.to=uclprism@gmail.com
