--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -19,7 +19,7 @@ db.maxPoolSize=20
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
 email.prod=false
-email.sender=com.zuehlke.pgadmissions.mail.MailMockServer
+email.sender=com.zuehlke.pgadmissions.mail.MailMockSender
 
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
