Lots of refactoring to the export request builder to make it possible to autowire it.

--- a/src/environments/environment.ci.properties
+++ b/src/environments/environment.ci.properties
@@ -48,8 +48,8 @@ hibernate.search.default.buildIndexOnStartup=false
 # -----------------------------------------------------------------------------
 # EMAIL SCHEDULERS & TIMINGS
 # -----------------------------------------------------------------------------
-daily.maintenance.cron=0 0 1 * * *
-ongoing.maintenance.cron=0 */5 * * * *
+maintenance.daily=0 0 1 * * *
+maintenance.ongoing=0 */5 * * * *
 
 # -----------------------------------------------------------------------------
 # PORTICO INTEGRATION SETTINGS
