--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -55,14 +55,24 @@ startup.advertCategory.import=false
 # -----------------------------------------------------------------------------
 # SYSTEM-DATA-IMPORT
 # -----------------------------------------------------------------------------
-institutionDomicile.import.location=xml/iso/iso_country_codes.xml
-advertCategory.import.location=xml/opportunityCategories/soc2010.csv
+import.institutionDomicile.location=xml/iso/iso_country_codes.xml
+import.advertCategory.location=xml/opportunityCategories/soc2010.csv
+
+# -----------------------------------------------------------------------------
+# SYSTEM-DATA-EXPORT
+# -----------------------------------------------------------------------------
+export.not.provided=Not provided
+export.ip.not.provided=127.0.0.1
+export.telephone.not.provided=+44 (0) 0000 000 000
+export.other.provided=OTHER
+export.refer.to.document=Refer to attached document.
+export.source=PRISM
 
 # -----------------------------------------------------------------------------
 # EMAIL SCHEDULERS & TIMINGS
 # -----------------------------------------------------------------------------
-daily.maintenance.cron=0 0 1 * * *
-ongoing.maintenance.cron=0 */5 * * * *
+maintenance.daily=0 0 1 * * *
+maintenance.ongoing=0 */5 * * * *
 
 # -----------------------------------------------------------------------------
 # PORTICO INTEGRATION SETTINGS
