Current work on user search.

--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -49,6 +49,7 @@ hibernate.search.default.indexBase=/opt/bitnami/jboss/pgadmissions-sit-indexes/
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=false
 startup.workflow.initialize=false
+startup.workflow.initialize.notifications=false
 startup.institutionDomicile.import=false
 startup.advertCategory.import=false
 
