--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -47,7 +47,8 @@ hibernate.search.default.indexBase=/usr/local/jboss/pgadmissions-indexes/
 # START-UP
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=false
-startup.workflow.initialize=false
+startup.workflow.initialize=true
+startup.workflow.initialize.notifications=false
 startup.institutionDomicile.import=false
 startup.advertCategory.import=false
 
