--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -36,6 +36,7 @@ integration.testing.clear.history=false
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=false
 startup.workflow.initialize=false
+startup.workflow.initialize.notifications=false
 startup.institutionDomicile.import=false
 startup.advertCategory.import=false
 
