--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -47,6 +47,7 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=false
 startup.workflow.initialize=false
+startup.workflow.initialize.notifications=false
 startup.institutionDomicile.import=false
 startup.advertCategory.import=false
 
