Added support for rejection

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -45,7 +45,7 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.hibernate.search.buildIndex=true
+startup.hibernate.search.buildIndex=false
 startup.workflow.initialize=false
 startup.workflow.initialize.notifications=false
 startup.institutionDomicile.import=false
