--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -46,8 +46,8 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # START-UP
 # -----------------------------------------------------------------------------
 startup.hibernate.search.buildIndex=true
-startup.workflow.initialize=false
-startup.workflow.initialize.notifications=false
+startup.workflow.initialize=true
+startup.workflow.initialize.notifications=true
 startup.institutionDomicile.import=false
 startup.advertCategory.import=false
 
